--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="assets/web.png" alt="demo-image" />
       </div>
       <div class="error-page">
-        <img src="assets/404-error-page-web.png" alt="404-error" />
+        <img src="assets/404 error page (web).png" alt="404-error" />
       </div>
       <div class="black-camera">
         <img src="assets/img3.jpg" alt="camera-image" />
